--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,36 @@
     <link rel="stylesheet" href="main.scss">
     <title>Document</title>
 </head>
+
 <body>
-    <p>My cool server</p>
+    <header>
+        <nav>
+            <a>Movies</a>
+            <a>Reviews</a>
+            <a>Watch List</a>
+        </nav>
+    </header>
+        <section>
+            <h1>Based on What You've Reviewed</h1>
+            <div class="card-container">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </div>
+        </section>
+        <section>
+            <h1>Recent Reviews</h1>
+            <a>See All</a>
+            <div class="card-container">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </div>
+    </div>
 </body>
+
 </html>
