split up js files

--- a/public/index.html
+++ b/public/index.html
@@ -178,19 +178,18 @@
         </div>
     </section>
 
-    <div id="mainPage">
-        <section>
-            <h1 class="cards-title">Based on What You've Reviewed</h1>
-            <div class="card-container">
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-                <div class="card"></div>
-            </div>
-        </section>
-    </div>
+    <section id="mainPage">
+        <h1 class="cards-title">Based on What You've Reviewed</h1>
+        <div class="card-container">
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+        </div>
+    </section>
 </body>
 <script src="script.js" type="module"></script>
+<script src="MultiFieldInput.js" type="module"></script>
 
 </html>
